fix: Ajuste de projeto para funcionar sem keycloak + os testes